<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/TextEditWorkPlace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TextEditWorkDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/ButtonAddEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/colorYellow"
        android:text="@string/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextEditWorkTimeFrom" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/default_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonAddEntry"
        tools:listitem="@layout/work_entry" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:text="@string/labelWorkPlace"
        app:layout_constraintBottom_toBottomOf="@+id/TextEditWorkPlace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TextEditWorkPlace" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/labelWorkDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextEditWorkPlace" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/labelWorkTimeFrom"
        app:layout_constraintBottom_toBottomOf="@+id/TextEditWorkTimeFrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/TextEditWorkTimeFrom" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/labelWorkTimeTo"
        app:layout_constraintBottom_toBottomOf="@+id/TextEditWorkTimeTo"
        app:layout_constraintStart_toEndOf="@+id/TextEditWorkTimeFrom"
        app:layout_constraintTop_toTopOf="@+id/TextEditWorkTimeTo" />

    <EditText
        android:id="@+id/TextEditWorkTimeFrom"
        android:layout_width="75dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/TextEditWorkDone" />

    <EditText
        android:id="@+id/TextEditWorkTimeTo"
        android:layout_width="75dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/TextEditWorkDone" />

</androidx.constraintlayout.widget.ConstraintLayout>